# Data-Policy-Agent

./: .gitignore  Dockerfile  README.md  nixpacks.toml  requirements.txt
backend/: .env.example  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 5be26697276d_initial_schema_with_all_models.py  add_transactions_table.py  add_users_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  compliance_rule.py  database_connection.py  enums.py  monitoring_config.py  policy.py  review_action.py  scan_history.py  user.py  violation.py
backend/app/routers/: __init__.py  dashboard.py  database.py  monitoring.py  policies.py  rules.py  violations.py
backend/app/services/: __init__.py  db_scanner.py  llm_client.py  policy_parser.py  scheduler.py
backend/tests/: __init__.py
backend/tests/property/: test_dashboard_properties.py  test_filtering_properties.py  test_monitoring_properties.py  test_review_properties.py  test_rule_properties.py  test_scan_properties.py  test_sql_validity_properties.py  test_violation_properties.py
backend/tests/unit/: test_dashboard_api.py  test_database_api.py  test_db_scanner.py  test_llm_client.py  test_monitoring_api.py  test_policy_api.py  test_policy_parser.py  test_rules_api.py  test_scheduler.py  test_violations_api.py
demo/: README.md  sample_policy.txt  sample_target_db.sql  seed_data.py
frontend/: index.html  package-lock.json
sample_data/: AML_Compliance_Policy.md  generate_ibm_aml_policy_pdf.py  generate_pdf.py
(+29 files in other folders)
